--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -15,43 +15,57 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".addItem.AddFragment">
 
-    <LinearLayout
-        android:id="@+id/linear_layout"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
-        android:padding="20dp">
+        android:layout_margin="20dp"
+        app:cardCornerRadius="25dp">
 
 
-        <EditText
-            android:id="@+id/edit_name"
-            android:layout_margin="20dp"
+        <LinearLayout
+            android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@={viewModel.name}"/>
+            android:layout_centerInParent="true"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:padding="20dp">
 
-        <EditText
-            android:id="@+id/edit_count"
-            android:layout_margin="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@={viewModel.count}"/>
 
-        <EditText
-            android:id="@+id/edit_description"
-            android:layout_margin="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@={viewModel.description}"/>
+            <EditText
+                android:id="@+id/edit_name"
+                android:layout_margin="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@={viewModel.name}"/>
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/edit_count"
+                android:layout_margin="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@={viewModel.count}"/>
+
+            <EditText
+                android:id="@+id/edit_description"
+                android:layout_margin="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@={viewModel.description}"/>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
     <Button
         android:id="@+id/add_Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add item"
-        android:layout_below="@+id/linear_layout"
+        android:layout_below="@+id/cardView"
         android:layout_centerHorizontal="true"
         app:icon="@drawable/add_image"
         style="?attr/materialButtonOutlinedStyle"
