--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#90D8E0"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".DescriptionFragment">
+    tools:context=".showDescription.DescriptionFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/tv_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
